--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/router-devtools": "^1.106.0",
     "@tanstack/start": "^1.107.0",
     "ioredis": "^5.5.0",
+    "jszip": "^3.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
