--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
       dockerfile: Dockerfile
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - REDIS_USERNAME=${REDIS_USER:-default}
       - REDIS_HOST=redis
     restart: unless-stopped
     depends_on:
@@ -14,7 +13,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    command: redis-server --requirepass ${REDIS_PASSWORD} --user ${REDIS_USER:-default} on >${REDIS_PASSWORD} ~* +@all
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -22,7 +21,6 @@ services:
       timeout: 5s
       retries: 5
     environment:
-      - REDIS_USER=${REDIS_USER}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     volumes:
       - redis_data:/data
