--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start": "vinxi start"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.106.0",
-    "@tanstack/router-devtools": "^1.106.0",
-    "@tanstack/start": "^1.107.0",
+    "@tanstack/react-router": "^1.108.0",
+    "@tanstack/router-devtools": "^1.108.0",
+    "@tanstack/start": "^1.108.0",
     "ioredis": "^5.5.0",
     "jszip": "^3.10.1",
     "react": "^19.0.0",
@@ -31,7 +31,9 @@
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
   },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.38.8"
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   }
 }
