--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-router": "^1.108.0",
     "@tanstack/router-devtools": "^1.108.0",
     "@tanstack/start": "^1.108.0",
+    "@upstash/redis": "^1.34.6",
     "ioredis": "^5.5.0",
     "jszip": "^3.10.1",
     "react": "^19.0.0",
@@ -25,8 +26,8 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "postcss": "^8.5.1",
     "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
